--- a/vignettes/phenology_modelling.Rmd
+++ b/vignettes/phenology_modelling.Rmd
@@ -23,7 +23,7 @@ The following are ideas that I came up with to improve the model.
 2) Add information about plant species
 3) Use more parameters for model
 
-This markdown implements adding more data and using an additional parameter.
+This markdown implements adding more data (Site of Bartel) and using an additional parameter (Z-normalized radiation).
 
 After the implementation the resuls will be compared to the MODIS dataset phenology data.
 # Setup
@@ -31,6 +31,7 @@ After the implementation the resuls will be compared to the MODIS dataset phenol
 First, the same workflow for harvard data download is performed as in the turorial. This is also done for an additional site: Bartel.
 
 ```{r, message = FALSE}
+set.seed(123) #For reproducability
 packages <- c("phenocamr","dplyr","ggplot2","lubridate","daymetr","leaflet","terra","MODISTools","daymetr","renv","GenSA") 
 
 source("../R/load_packages.R")
@@ -713,5 +714,5 @@ ggplot(
 
 
 ```
-Alright, looks much better. Still the RMSE remains very high. Therefore, I expect that mainly the yearly signal correlates and the spatial still does not.
+Alright, looks much better, the R-Squared is now above 0.4, which is great, still the RMSE remains very high. Therefore, I expect that mainly the yearly signal correlates and the spatial still does not.
 For further analysis one could look at each year separately.
